@@ -4,9 +4,9 @@ lib_LTLIBRARIES = libLHAPDF.la
 
 libLHAPDF_la_SOURCES = \
   PDFGrid.cc \
-  BicubicInterpolator.cc BilinearInterpolator.cc
+  BicubicInterpolator.cc BilinearInterpolator.cc \
+  NearestPointExtrapolator.cc
 # AlphaS.cc
-# NearestPointExtrapolator.cc
 #PDFSet.cc
 
 # if ENABLE_LHAGLUE
